[package]
name = "roller"
version = "0.1.0"
authors = ["sflan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rand = "0.8.4"
fastrand = "1.4.1"
ctrlc = "3.1.9"
chrono = "0.4.19"
humantime = "2.1.0"
num-format = "0.4.0"
thread-priority = "0.2.4"
num_cpus = "1.13.0"